@@ -152,6 +152,8 @@ public abstract class BaseTest {
   protected MockMvc mockMvc;
   @Autowired
   private FolioModuleMetadata folioModuleMetadata;
+  @Autowired
+  public ObjectMapper objectMapper;
 
   static {
     postgresDBContainer.start();
@@ -248,7 +250,7 @@ public abstract class BaseTest {
     var uuid = UUID.randomUUID();
 
     return new BulkOperationRuleCollection()
-      .bulkOperationRules(Arrays.stream(rules).map(rule -> rule.bulkOperationId(uuid)).collect(Collectors.toList()))
+      .bulkOperationRules(Arrays.stream(rules).map(rule -> rule.bulkOperationId(uuid)).toList())
       .totalRecords(rules.length);
   }
 
